Bug 579702 - cleanup, and move interpreter plugin to java 17
Change-Id: I9c4daa0e0d2b890c8a2f8ed317352f061c7c1ba0